--- a/Avp/Virus.html
+++ b/Avp/Virus.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Exposé Virus</title>
+    <title>Les Virus</title>
   </head>
   <body>
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
