--- a/Avp/Virus.html
+++ b/Avp/Virus.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Exposé Virus</title>
+    <title>Les Virus</title>
   </head>
   <body>
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
@@ -14,35 +14,12 @@
         <script src="https://superatraction.github.io/JQuery/external/jquery/jquery.js"></script>
         <script src="https://superatraction.github.io/JQuery/jquery-ui.js"></script>
       </font></p>
-    <div class="ui-widget">
-      <div class="ui-state-highlight ui-corner-all" style="margin-top:
-        20px; padding: 0 .7em;">
-        <p><span class="ui-icon ui-icon-info" style="float: left;
-            margin-right: .3em;"></span> <strong>Salut ! </strong>Bienvenue
-
-
-
-
-
-
-
-
-
-
-
-
-          sur mon Exposé ! <br>
-          Si vous êtes ici, c'est que ça marche ! (Youpi)<br>
-          Il est écrit en HTML(language des pages webs)<br>
-          Oh, et je tournais des liens pour + d'infos.<br>
-          Et c'est parti sur un exposé (Sans bug, je l’espère)<br>
-        </p>
-      </div>
-    </div>
-    <p style="margin-bottom: 0cm"><font style="font-size: 32pt" size="7"><br>
-        Exposé&nbsp;:</font></p>
-    <p style="margin-bottom: 0cm"><font style="font-size: 32pt" size="7">
-        <font color="#ccff66">Les Virus (informatiques)</font></font></p>
+    <h1><font color="#3333ff"><a moz-do-not-send="true"
+          href="https://ecologiccode.github.io/"><font size="7">&lt;
+            Revenir au site d'EcologicCode</font></a></font><br>
+    </h1>
+    <font style="font-size: 32pt" size="7"><font color="#ccff66">Les
+        Virus (informatiques)</font></font>
     <p style="margin-bottom: 0cm"><font color="#000000"><font
           style="font-size: 13pt">Ils sont embêtants, ces Virus, mais,
           Comment fonctionnent-ils&nbsp;?</font></font></p>
@@ -112,6 +89,9 @@
 
 
 
+
+
+
                         qu’un virus informatique&nbsp;?</span></span> </font></font></font>
             </p>
             <p style="margin-bottom: 0cm"><font face="Times New Roman,
@@ -156,6 +136,9 @@
             <p style="margin-bottom: 0cm"><font style="font-size: 15pt"><font
                   color="#000000"><font face="Times New Roman, serif">3-0&nbsp;:</font></font><font
                   color="#00cc00"><font face="Times New Roman, serif">Comment
+
+
+
 
 
 
@@ -253,6 +236,9 @@
                         Que veut dire Décompiler&nbsp;?</font></p>
                     <font style="font-size: 15pt" color="blue">Décompiler,
 ça
+
+
+
 
 
 
@@ -520,7 +506,13 @@ src="file:///C:/Users/pierr/Documents/Dossiers/Ann%C3%A9es/2022/IDP.GENERIC.PNG"
 
 
 
+
+
+
             «</font><font style="font-size: 15pt" size="4"><i>&nbsp;Certains
+
+
+
 
 
 
@@ -568,6 +560,9 @@ src="file:///C:/Users/pierr/Documents/Dossiers/Ann%C3%A9es/2022/IDP.GENERIC.PNG"
     <p><font color="#000000"><font style="font-size: 40pt" size="7"><font
             style="font-size: 15pt" size="4">Citation du site d'<a
               href="https://www.avast.com/fr-fr/c-computer-virus">Avast</a>&nbsp;:
+
+
+
 
 
 
@@ -651,6 +646,9 @@ src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Computer%20Virus/Wh
 
 
 
+
+
+
               virus informatiques disposent de plusieurs mécanismes de
               propagation par Internet. Voici comment des virus sont
               susceptibles de s’introduire dans votre ordinateur&nbsp;:</span></i></font></font></p>
@@ -698,6 +696,9 @@ src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Computer%20Virus/Ic
 
 
 
+
+
+
                 dissimuler des virus dans des applications, des
                 documents envoyés via un service de partage de fichiers,
                 des plug-ins et tout autre lieu où se trouvent des
@@ -709,6 +710,9 @@ src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Computer%20Virus/Ic
 src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Computer%20Virus/Icon_03-1.png?width=55&amp;name=Icon_03-1.png"
                 name="images9" width="55" border="0" align="BOTTOM"
                 height="56"><font face="Times New Roman, serif"><i>Services
+
+
+
                   de messagerie</i></font></strong><font face="Times New
               Roman, serif"><i>&nbsp;: les virus peuvent être propagés
                 via des messages SMS ou des services de messagerie tels
@@ -723,6 +727,9 @@ src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Computer%20Virus/Ic
 src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Computer%20Virus/Icon_04-1.png?width=55&amp;name=Icon_04-1.png"
                 name="images10" width="55" border="0" align="BOTTOM"
                 height="56"><font face="Times New Roman, serif"><i>Logiciels
+
+
+
                   obsolètes&nbsp;:</i></font></strong><font face="Times
               New Roman, serif"><i>&nbsp;si vous n’avez pas effectué de
                 mises à jour de vos applications ou de vos systèmes
@@ -730,6 +737,9 @@ src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Computer%20Virus/Ic
                 vulnérabilités sont certainement présentes et les
                 cybercriminels se feront un plaisir de les&nbsp;<a
                   href="https://www.avast.com/fr-fr/c-exploits">exploiter</a>&nbsp;pour
+
+
+
 
 
 
@@ -754,6 +764,9 @@ src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Computer%20Virus/Ic
 src="https://academy.avast.com/hs-fs/hubfs/New_Avast_Academy/Computer%20Virus/Icon_05-1.png?width=55&amp;name=Icon_05-1.png"
                 name="images11" width="55" border="0" align="BOTTOM"
                 height="56"><font face="Times New Roman, serif"><i>Malvertising
+
+
+
                   (publicités malveillantes)&nbsp;:&nbsp;</i></font></strong><font
               face="Times New Roman, serif"><i>les virus peuvent être
                 dissimulés dans des publicités en ligne, telles que des
@@ -838,6 +851,9 @@ vos
 
 
 
+
+
+
         contacts pour les inciter à exécuter une action qui va
         introduire le virus chez eux, afin de poursuivre leur
         propagation.</i>&nbsp;»</p>
@@ -874,10 +890,16 @@ les
 
 
 
+
+
+
           appareils, y compris les équipements</i></strong><i>&nbsp;<a
           href="https://www.avast.com/fr-fr/c-can-macs-get-viruses">Mac</a></i><strong><i>,&nbsp;</i></strong><a
         href="https://www.avast.com/fr-fr/c-can-phones-get-viruses"><i>iOS
 et
+
+
+
 
 
 
@@ -898,6 +920,9 @@ et
         susceptible de se connecter à Internet est également exposé aux
         malwares, même les&nbsp;<a
           href="https://www.avast.com/fr-fr/c-iot-security-risks">appareils
+
+
+
 
 
 
@@ -934,8 +959,14 @@ passant
 
 
 
+
+
+
         par les&nbsp;<a href="https://www.avast.com/fr-fr/c-trojan">chevaux
 de
+
+
+
 
 
 
@@ -1089,6 +1120,9 @@ de
 
 
 
+
+
+
             &nbsp;&nbsp;&nbsp; bye bye,les virus</i></font></font></p>
     <p style="margin-bottom: 0cm"><a name="topic-5"></a><font
         color="#000000"><font style="font-size: 40pt" size="7">3-0&nbsp;:</font></font><font
@@ -1129,6 +1163,9 @@ de
 
 
 
+
+
+
             évitez de pirater des fichiers média tels que de la musique
             ou des films à partir de plateformes de partage de fichiers.
             Vous ne pouvez jamais être sûr de rien lorsque vous
@@ -1137,6 +1174,9 @@ de
       <li>
         <p><strong><i>Soyez prudent même lorsque vous effectuez des
               achats dans des boutiques bien connues</i></strong><i>&nbsp;:
+
+
+
 
 
 
@@ -1175,10 +1215,16 @@ de
 
 
 
+
+
+
             de la télécharger.</i></p>
       </li>
       <li>
         <p><strong><i>Ignorez les publicités et les pop-ups</i></strong><i>&nbsp;:
+
+
+
 
 
 
@@ -1229,10 +1275,16 @@ de
 
 
 
+
+
+
             quel que soit votre niveau de compétence, les virus peuvent
             toujours vous filer entre les doigts. Renforcez votre ligne
             de défense à l’aide d’un antivirus puissant comme&nbsp;<a
               href="https://www.avast.com/fr-fr/avast-one">Avast&nbsp;One</a>&nbsp;qui
+
+
+
 
 
 
@@ -1268,6 +1320,9 @@ de
             &nbsp;&nbsp;&nbsp;&nbsp; <img moz-do-not-send="true"
 src="https://cdn.freebiesupply.com/logos/large/2x/ubuntu-icon-logo-png-transparent.png"
               title="Ubuntu" alt="Ubuntu" width="129" height="129">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+
 
 
 
