--- a/Avp/Virus.html
+++ b/Avp/Virus.html
@@ -379,8 +379,7 @@
     <center>
       <p style="margin-bottom: 0cm"><font style="font-size: 40pt"
           size="7"><font color="#000000"><font style="font-size: 15pt"
-              size="4"><img moz-do-not-send="true"
-src="file:///C:/Users/pierr/Documents/Dossiers/Ann%C3%A9es/2022/IDP.GENERIC.PNG"
+              size="4"><img moz-do-not-send="true" src="IDP.GENERIC.PNG"
                 title="Fichier IDP.GENERIC" alt="Fichier IDP.GENERIC
                 IDP.GENERIC.PNG" width="592" border="1" height="420"><br>
             </font></font></font></p>
