--- a/Avp/Virus.html
+++ b/Avp/Virus.html
@@ -1409,7 +1409,7 @@ href="https://www.avast.com/fr-fr/c-how-to-remove-virus-from-pc#topic-2"
           moz-do-not-send="true">Avast.com/fr-fr/c-how-to-remove-virus-from-pc#topic-2</a></strong><strong><font
           color="#000000"><font style="font-size: 15pt" size="4"><span
               style="font-weight: normal">.</span></font></font></strong></p>
-    <p>Eh ben, ont est arrivé à la fin de l'exposé, Mais avant de se
+    <p>Fin... Mais avant de se
       quitter,,,<br>
     </p>
     <p>Je vous donne 2 sites Avec des infos Sur les Virus :<br>
